# CraneIRGen

./: .gitignore  Cargo.toml  Dockerfile  README.md  start.sh
configs/: arch_aarch64.toml  arch_riscv64.toml  arch_s390x.toml  arch_x86.toml
crates/cf-constructor/: Cargo.toml
crates/cf-constructor/assets/: if_elsee.dot  test.dot  test_dominator.dot
crates/cf-constructor/src/: lib.rs
crates/cg-constructor/: Cargo.toml
crates/cg-constructor/src/: lib.rs
crates/commons/: Cargo.toml
crates/commons/src/: fixed_rng.rs  lib.rs  types.rs
crates/function-generator/: Cargo.toml
crates/function-generator/src/: dominator_tree.rs  instruction_selector.rs  lib.rs
isle_sources/: isle_aarch64.rs  isle_opt.rs  isle_pulley_shared.rs  isle_riscv64.rs  isle_s390x.rs  isle_x64.rs
mongodb_backup/cranelift/: ir.metadata.json
src/: main.rs
wasmtime/cranelift/codegen/: Cargo.toml  build.rs
wasmtime/cranelift/codegen/src/: cfg_printer.rs  lib.rs
wasmtime/cranelift/codegen/src/ir/: dfg.rs  instructions.rs  layout.rs
wasmtime/cranelift/codegen/src/verifier/: mod.rs
wasmtime/cranelift/entity/src/: list.rs
wasmtime/cranelift/filetests/src/: lib.rs  test_print_cfg.rs
wasmtime/cranelift/jit/src/: memory.rs
wasmtime/cranelift/reader/src/: parser.rs
wasmtime/cranelift/src/: print_cfg.rs  run.rs
wasmtime/crates/cache/src/: worker.rs
wasmtime/crates/cranelift/src/: gc.rs
wasmtime/crates/environ/src/: gc.rs
wasmtime/crates/fiber/: build.rs
wasmtime/crates/fuzzing/wasm-spec-interpreter/: build.rs
wasmtime/crates/wasmtime/: build.rs
wasmtime/crates/wasmtime/src/runtime/: store.rs  uninhabited.rs
wasmtime/crates/wasmtime/src/runtime/gc/: disabled.rs
wasmtime/crates/wasmtime/src/runtime/vm/: libcalls.rs
wasmtime/crates/wasmtime/src/runtime/vm/gc/: disabled.rs
wasmtime/crates/wasmtime/src/runtime/vm/instance/allocator/: pooling.rs
wasmtime/crates/wasmtime/src/runtime/vm/instance/allocator/pooling/: decommit_queue.rs
wasmtime/pulley/src/: lib.rs
wasmtime/winch/codegen/: build.rs
