[package]
name = "CraneIRGen"
version = "0.1.0"
edition = "2021"


[dependencies]
cranelift-reader = {path="wasmtime/cranelift/reader" }
memmap2 = "0.9.4"
target-lexicon = "0.12.15"
clap = { version = "4.5.15", features = ["derive"] }
mongodb = { version = "3.0.1", features = ["sync"] }
serde = { version = "1.0.207", features = ["derive"] }
serde_json = "1.0.124"
cranelift-codegen = {path="wasmtime/cranelift/codegen", features = ["enable-serde"] }
cranelift-native = {path = "wasmtime/cranelift/native"}
cf-constructor = {path = "crates/cf-constructor"}
cg-constructor = {path = "crates/cg-constructor"}
function-generator = {path = "crates/function-generator", features = ["default"]}
commons = {path = "crates/commons"}
anyhow = "1.0.86"
log = "0.4.22"
env_logger = "0.11.5"
wide = "0.7.33"
bytemuck = "1.23.1"
toml = "0.9.2"

[features]
default = ["riscv"]  

x86-64 = []
aarch64 = []
s390x = []
riscv = []


