[package]
name = "cg-constructor"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.207", features = ["derive"] }
serde_json = "1.0.124"
cranelift-codegen = {path="../../wasmtime/cranelift/codegen", features = ["enable-serde", "pub_fields"] }
anyhow = "1.0.86"
log = "0.4.22"
rand = "0.9.0-alpha.2"
commons = {path = "../commons"}