[package]
name = "function-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.207", features = ["derive"] }
serde_json = "1.0.124"
cranelift-codegen = {path="../../wasmtime/cranelift/codegen", features = ["enable-serde", "pub_fields"] }
commons = {path = "../commons"}
cf-constructor = {path = "../cf-constructor"}
cg-constructor = {path = "../cg-constructor"}
memmap2 = "0.9.4"
target-lexicon = "0.12.15"
clap = { version = "4.5.15", features = ["derive"] }
mongodb = { version = "3.0.1", features = ["sync"] }
anyhow = "1.0.86"
log = "0.4.22"
rand = "0.9.0-alpha.2"
wide = "0.7.33"
bytemuck = "1.23.1"


[features]
default = ["riscv"]  


x86-64 = []
aarch64 = []
s390x = []
riscv = []